[tool.poetry]
name = "bip"
version = "0.1.0"
description = "Botnet Identification Project"
authors = ["Filip <filip.savin@cujo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyyaml = "^6.0.1"
python-dotenv = "^1.0.0"
better-exceptions = "^0.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
