[tool.poetry]
name = "bip"
version = "0.1.0"
description = "Botnet Identification Project"
authors = ["Filip <filip.savin@cujo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyyaml = "^6.0.1"
python-dotenv = "^1.0.0"
better-exceptions = "^0.3.3"
docopt = "^0.6.2"
requests = "^2.31.0"
pyminizip = "^0.2.6"

[tool.poetry.group.dev.dependencies]
pylint = "^2.17.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
